--- a/src/styles/card-styles.css
+++ b/src/styles/card-styles.css
@@ -6,6 +6,8 @@
     align-items: center;
     flex-direction: column;
     gap: 12px;
+    cursor: pointer;
+    transition: background-color 250ms ease-in-out;
 }
 
 .card-item > img {
@@ -18,4 +20,8 @@
     text-align: center;
     font-weight: 500;
     color: #006778;
+}
+
+.card-item:hover {
+    background-color: #e6f0f2;
 }
